--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -5,7 +5,7 @@
         
         <title>Vortex Commander</title>
 		<link rel="stylesheet" href="VortexCommander.css" type="text/css">
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<!--        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">-->
         <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
 	</head>
 	
@@ -18,6 +18,8 @@
                 <div id="div_mapa">
                 </div>
             </div>  
+            <div id="plantilla_label_soldado" class="label_soldado">
+            </div>
         </div>  
     </body>
     
@@ -46,6 +48,7 @@
     <!--Vortex Video-->
     <script type="text/javascript" src="VortexCommander.js"></script> 
     <script type="text/javascript" src="AppVortexCommander.js"></script> 
+    <script type="text/javascript" src="Soldado.js"></script> 
 
 </html>
 
