2_Indicar destino a los rangers

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCTwSyuSvqrNmXA32DrIrHf1VMBx02o0HE&sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>
     
     <!--Vortex JS-->
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/Vortex.js"></script>
