--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -48,7 +48,7 @@
     
     <!--Vortex Commander-->
     <script type="text/javascript" src="VortexCommander.js"></script> 
-    <script type="text/javascript" src="AppVortexCommander.js"></script> 
+    <script type="text/javascript" src="PanelControlRangers.js"></script> 
     <script type="text/javascript" src="VistaRangerEnMapa.js"></script> 
 
 </html>
