--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -14,11 +14,11 @@
         </div>	
         
         <div id="plantillas">
-            <div id="plantilla_app_vortex_commander" class="app_vortex_commander">
+            <div id="plantilla_panel_control_rangers" class="panel_control_rangers">
                 <div id="div_mapa">
                 </div>
             </div>  
-            <div id="plantilla_label_soldado" class="label_soldado">
+            <div id="plantilla_label_ranger" class="label_ranger">
             </div>
         </div>  
     </body>
