--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -17,6 +17,14 @@
             <div id="plantilla_panel_control_rangers" class="panel_control_rangers">
                 <div id="div_mapa">
                 </div>
+                <div id="botonera_ranger">
+                    <div id="btn_seguir_ranger" class="boton_en_mapa">
+                        <img id="imagen_btn_seguir_ranger" class="imagen_boton"  src="seguir_icon.png"/>
+                    </div>
+                    <div id="btn_go_to" class="boton_en_mapa">
+                        <img id="imagen_btn_go_to" class="imagen_boton" src="go_to_icon.png"/>
+                    </div>
+                </div>
             </div>  
             <div id="plantilla_label_ranger" class="label_ranger">
             </div>
