--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -12,16 +12,15 @@
 	<body>		
         <div id="panel_principal">
         </div>	
-        
         <div id="plantillas">
             <div id="plantilla_panel_control_rangers" class="panel_control_rangers">
                 <div id="div_mapa">
                 </div>
                 <div id="botonera_ranger">
-                    <div id="btn_seguir_ranger" class="boton_en_mapa">
+                    <div id="btn_seguir_ranger" class="boton_redondo_flotante">
                         <img id="imagen_btn_seguir_ranger" class="imagen_boton"  src="seguir_icon.png"/>
                     </div>
-                    <div id="btn_go_to" class="boton_en_mapa">
+                    <div id="btn_go_to" class="boton_redondo_flotante">
                         <img id="imagen_btn_go_to" class="imagen_boton" src="go_to_icon.png"/>
                     </div>
                 </div>
@@ -56,6 +55,7 @@
     
     <!--Vortex Commander-->
     <script type="text/javascript" src="VortexCommander.js"></script> 
+    <script type="text/javascript" src="BotonRedondoFlotante.js"></script> 
     <script type="text/javascript" src="PanelControlRangers.js"></script> 
     <script type="text/javascript" src="VistaRangerEnMapa.js"></script> 
 
