Boton para dejar o no rastro y cambiado el icono del ranger

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -23,6 +23,9 @@
                     <div id="btn_go_to" class="boton_redondo_flotante">
                         <img id="imagen_btn_go_to" class="imagen_boton" src="go_to_icon.png"/>
                     </div>
+                    <div id="btn_dejar_rastro" class="boton_redondo_flotante">
+                        <img id="imagen_btn_go_to" class="imagen_boton" src="rastro_icon.png"/>
+                    </div>
                 </div>
             </div>  
             <div id="plantilla_label_ranger" class="label_ranger">
