23_independencia_gmaps: zoom/pan independiente, reemplazado marker

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCTwSyuSvqrNmXA32DrIrHf1VMBx02o0HE&sensor=false"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>
+    <script type="text/javascript" src="jquery.mousewheel.js"></script> 
     
     <script type="text/javascript" src="paperjs-v0.9.9/paper.js"></script>
     
