23-independencia: listo, ya dibuja solo sobre la capa de paperjs

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -64,6 +64,8 @@
     <script type="text/javascript" src="BotonRedondoFlotante.js"></script> 
     <script type="text/javascript" src="PanelControlRangers.js"></script> 
     <script type="text/javascript" src="VistaRangerEnMapa.js"></script> 
+    <script type="text/javascript" src="VistaDestinoRaider.js"></script> 
+    <script type="text/javascript" src="VistaDerroteroRaider.js"></script> 
 
 </html>
 
