incluido ClonadorDeObjetos a las referencias

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/FiltrosYTransformaciones.js"></script>
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoClienteHTTP.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/GeneradorDeIdMensaje.js"></script> 
+    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/ClonadorDeObjetos.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoMultiplexor.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoPortalBidi.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoPortalBidiMonoFiltro.js"></script> 
