mejorada la performance con web sockets

--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/Canal.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoPortalConCanal.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoPortalBidiMonoFiltroConCanal.js"></script> 
+    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/ClonadorDeObjetos.js"></script> 
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/socket.io.js"></script>
     <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/NodoConectorSocket.js"></script>
     
