32_id_de_bots y contador de bots en admin

--- a/bots.html
+++ b/bots.html
@@ -11,7 +11,9 @@
 	
 	<body>		
         <div id="panel_principal">
-            <input type="button" id="btn_crear_bot" value="Crear Bot Ranger"/>
+            <input type="button" id="btn_crear_bot" value="Crear Bot Raider"/>
+            <span>#Bots:</span>
+            <span id="contador_bots"></span>
         </div>	
         
         <div id="plantillas">
