--- a/VortexCommander.html
+++ b/VortexCommander.html
@@ -44,8 +44,8 @@
     <script type="text/javascript" src="paperjs-v0.9.23/paper-full.js"></script>
     
     <!--Vortex JS-->
-    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/socket.io.js"></script>
-    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/vortex.min.js"></script>
+    <script type="text/javascript" src="http://vortex-rd.github.io/vortex-js/socket.io.js"></script>
+    <script type="text/javascript" src="http://vortex-rd.github.io/vortex-js/vortex.min.js"></script>
     
     <!--Vortex Commander-->
     <script type="text/javascript" src="VortexCommander.js"></script> 
