reapuntando librerias vx

--- a/bots.html
+++ b/bots.html
@@ -28,8 +28,8 @@
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCTwSyuSvqrNmXA32DrIrHf1VMBx02o0HE&sensor=false"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=geometry&sensor=true"></script>
     
-    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/socket.io.js"></script>    <!--Vortex JS-->
-    <script type="text/javascript" src="http://jlurgo.github.io/VortexJS/vortex.min.js"></script>
+    <script type="text/javascript" src="http://vortex-rd.github.io/vortex-js/socket.io.js"></script>    <!--Vortex JS-->
+    <script type="text/javascript" src="http://vortex-rd.github.io/vortex-js/vortex.min.js"></script>
     
     <!--Administrador de bots-->
     <script type="text/javascript" src="AdministradorDeBots.js"></script> 
